# v2monitor_bot

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: main.py
bot/database/: v2monitor.db
bot/filters/: user_roles.py
bot/handlers/: admin_commands.py  clients_commands.py  clients_manager.py  commands.py  common_commands.py  policies_commands.py
bot/keyboards/: admin_keyboard.py  client_add_keyboard.py  menu_keyboard.py  policy_keyboard.py
bot/middlewares/: db_middleware.py  is_admin_middleware.py  only_clients_middleware.py  roles.py
bot/modules/: bot.py  logger.py  models.py  stat_extractor.py  v2ray.py
